<resources>
    <string name="app_name">ShareMyBike</string>
    <string name="title_activity_bike">BikeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Select Date</string>
    <string name="second_fragment_label">List of available bikes</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Select the date to list the avaiable bikes</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="bpiris_pmdm_com">bpiris@pmdm.com</string>
    <string name="av_real_f_brica_de_sedas_s_n">Av. Real Fábrica de Sedas, s/n</string>
    <string name="the_bike_experience_exchange_app">The bike experience exchange app</string>
    <string name="contentdescription">contentDescription</string>
    <string name="contentdescription2">contentDescription</string>
    <string name="contentdescription3">contentDescription3</string>
    <string name="title_activity_main_panel">MainPanelActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>